Add styles.css insertions

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
                  <div col-12>
                  <textarea type="text" name="Message" id="us" placeholder="Message.."></textarea>
                 </div>
+                <div id="submit buton">
+                    <button onclick="submit()" id="submit" class="btn">submit</button>
+                </div>
+                    
                  </div>
                  </form>
             
