Fix identation error

--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
         <div class="d">
             <h1><b>CONTACT US</b></h1></br>
             <form id="form">
-                
-                  <div class="name"><input type="text" name="Name" id="user" placeholder="Name.."></div> 
-                   <div class="email"><input type="text" name="Email" id="user" placeholder="Email.."></div> <br>
-                   <div class="message"><textarea type="text" name="Message" id="us" placeholder="Message.."></textarea></div> 
-                
+
+                <div class="name"><input type="text" name="Name" id="user" placeholder="Name.."></div>
+                <div class="email"><input type="text" name="Email" id="user" placeholder="Email.."></div> <br>
+                <div class="message"><textarea type="text" name="Message" id="us" placeholder="Message.."></textarea>
+                </div>
+
                 <div id="submit buton">
                     <button onclick="submit()" id="submit" class="btn">submit</button>
                 </div>
