remove points in image url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h4>WHAT WE DO</h4>
         <div class="row">
             <div class="col-sm-4">
-                <img src="../assets/services_icons/design_icon.png">
+                <img src="./assets/services_icons/design_icon.png">
                 <h4> DESIGNS</h4>
                 <P>
                         Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
@@ -48,7 +48,7 @@
                         </P>
             </div>
             <div class="col-sm-4">
-                <img src="../assets/services_icons/dev_icon.png">
+                <img src="./assets/services_icons/dev_icon.png">
                 <h5>DEVELOPMENT</h5>
                 <p>
                         
@@ -58,7 +58,7 @@
                         </p>
             </div>
             <div class="col-sm-4">
-                <img src="../assets/services_icons/product_icon.png">
+                <img src="./assets/services_icons/product_icon.png">
                 <h6>PRODUCT MANAGER</h6>
                 <p> Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                         This iterative process allows for changes as business requirements evolve.
@@ -68,16 +68,16 @@
         </div>
          <div class="row">
             <div class="col-md-3">
-                <img src="../assets/portfolio/work4.jpg">
+                <img src="./assets/portfolio/work4.jpg">
             </div>
          <div class="col-md-3">
-             <img src="../assets/portfolio/work3.jpg">
+             <img src="./assets/portfolio/work3.jpg">
          </div>
          <div class="col-md-3">
-             <img src="../assets/portfolio/work2.jpg">
+             <img src="./assets/portfolio/work2.jpg">
          </div>
             <div class="col-md-3">
-                <img src="../assets/portfolio/work1.jpg">
+                <img src="./assets/portfolio/work1.jpg">
                 
             </div>
          </div>
@@ -86,13 +86,13 @@
                         <img src="../assets/portfolio/work5.jpg">
                     </div>
                     <div class="col-md-3">
-                        <img src="../assets/portfolio/work6.jpg">
+                        <img src="./assets/portfolio/work6.jpg">
                     </div>
                     <div class="col-md-3">
-                        <img src="../assets/portfolio/work7.jpg">
+                        <img src="./assets/portfolio/work7.jpg">
                     </div>
                     <div class="col-md-3">
-                        <img src="../assets/portfolio/work8.jpg">
+                        <img src="./assets/portfolio/work8.jpg">
                     </div>
          </div><br><br><br>
          <div class="d" >
