upadate image url

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div><br>
         <div class="row">
             <div class="col-md-3">
-                <img src="../assets/portfolio/work5.jpg">
+                <img src="./assets/portfolio/work5.jpg">
             </div>
             <div class="col-md-3">
                 <img src="./assets/portfolio/work6.jpg">
